# matma

z1/: main.cpp  z1.cbp  z1.depend  z1.layout
z1/include/: Vector.h
z1/src/: Vector.cpp
z2/: CMakeLists.txt  main.cpp  wyniki.docx
z2/include/: Matrix4.h
z2/src/: Matrix4.cpp  Vector.cpp
z3/: CMakeLists.txt  main.cpp  wyniki.docx
z3/include/: Matrix4.h  Plane.h  Vector.h
z3/src/: Quaternion.cpp  Vector.cpp
z4/: main.cpp
z4/include/: Quaternion.h  Vector.h
z4/src/: Quaternion.cpp  Vector.cpp
z6/: CMakeLists.txt  main.cpp
z6/include/: Camera.h  Line.h  Vector4.h
z6/src/: Camera.cpp  Line.cpp  Plane.cpp  Vector.cpp  Vector4.cpp
